--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,8 +3,20 @@
 	box-sizing: border-box;
 }
 
-h1 {
-	font-size: 300px;
-	text-align: center;
-	color: fuchsia;
+.headerContainer {
+    width: 100%;
+        #headerImg {
+            width: 100%;
+            // margin-top: -10%;
+        }
+        #logo1 {
+            width: 8%;
+            border-radius: 50%;
+            border: 5px solid white;
+            position: relative;
+            left: 12%;
+            margin-top: -4%;
+        }
 }
+
+.searchColum
